--- a/ShelfDexMvx/src/ShelfDexMvx.Droid/Resources/layout/fragment_main.axml
+++ b/ShelfDexMvx/src/ShelfDexMvx.Droid/Resources/layout/fragment_main.axml
@@ -28,7 +28,8 @@
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <TextView
         android:id="@+id/txt_message"
