--- a/ShelfDexMvx/src/ShelfDexMvx.Droid/Resources/layout/fragment_main.axml
+++ b/ShelfDexMvx/src/ShelfDexMvx.Droid/Resources/layout/fragment_main.axml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
     
-    <com.airbnb.lottie.LottieAnimationView
+    <!--<com.airbnb.lottie.LottieAnimationView
 	    android:id="@+id/animation_view"
 	    android:layout_width="200dp"
 	    android:layout_height="200dp"
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toTopOf="@id/txt_welcome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        />-->
 
     <TextView
         android:id="@+id/txt_welcome"
